# activity-detection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
activity_detection/: activity_classifier.py  activity_detection.py  activity_manager.py  camera_input.py  devices.py  image_processing.py  logging_config.py  main.py  security_module.py
activity_detection/classifiers/: __init__.py  activity_classifier.py  interfaces.py  moondream_classifier.py  types.py  yolo_classifiers.py
activity_detection/inputs/: camera_input.py
activity_detection/processing/: image_processing.py
activity_detection/security/: security_capture.py  security_logging.py  security_module.py
camera_detection/: activity_detection.py  camera_input.py  image_processing.py  security_module.py
tests/: test_activity_classifier.py  test_activity_detection.py  test_camera_input.py  test_image_processing.py  test_security_module.py
